<resources>
    <string name="app_name">Kalkulator</string>
    <string name="plus">+</string>
    <string name="bersihkan">Bersihkan</string>
    <string name="masukan_angka_pertama">Masukan angka pertama</string>
    <string name="masukan_angka_kedua">Masukan angka kedua</string>
    <string name="masukkan_dua_angka">Masukkan Dua Angka</string>
    <string name="hasil">HASIL</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="x">X</string>
</resources>